fix: prevent some hover effects when on mobile view

--- a/styles/profileInfo.css
+++ b/styles/profileInfo.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    /* border-bottom: 1px solid rgb(239, 243, 244); */
 }
 
 .profile-info-container .spinner {
@@ -58,10 +57,6 @@
     cursor: pointer;
 }
 
-.follow-btn:hover {
-    background-color: rgb(39, 44, 48);
-}
-
 .unfollow-btn {
     display: none;
     height: 34px;
@@ -75,10 +70,6 @@
     border: 1px solid rgb(207, 217, 222);
     border-radius: 100px;
     cursor: pointer;
-}
-
-.unfollow-btn:hover {
-    background-color: rgb(15, 20, 25, 0.1);
 }
 
 .profile-info-container .profile-data {
@@ -126,10 +117,6 @@
     justify-content: center;
 }
 
-.profile-sections li:hover {
-    background-color: rgb(239, 243, 244);
-}
-
 .following-followers-container {
     box-sizing: border-box;
     gap: 30px;
@@ -144,4 +131,18 @@
 
 .following-followers-container span:hover {
     text-decoration: underline;
+}
+
+@media (hover: hover) and (pointer: fine) {
+    .follow-btn:hover {
+        background-color: rgb(39, 44, 48);
+    }
+
+    .unfollow-btn:hover {
+        background-color: rgb(15, 20, 25, 0.1);
+    }
+
+    .profile-sections li:hover {
+        background-color: rgb(239, 243, 244);
+    }
 }
